<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="MAIN" Id="{670da788-49f9-466f-b35c-dffe0ffc1692}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	mytrafficlight: trafficLight_typ;
	delay: BOOL;
	delay1: BOOL;
	delay2: BOOL;
	delay3: BOOL;
	delayR: BOOL;
	delayY: BOOL;
	delayG: BOOL;
	
	initPhase : TIME;

	updateOutput: outHandler;
	updateState : transitionLogic;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
CASE mytrafficlight.state.state OF

    trafficLight_state_enum.A1_DISCONNECTED: 
        mytrafficlight.state.state_str := 'stDISABLED'; 
        
		updateOutput(mytrafficlight:=mytrafficlight);
		
		mytrafficlight.timers.maxtime_GREEN := T#3S;
		mytrafficlight.timers.maxtime_RED := T#3S;
		mytrafficlight.timers.maxtime_YELLOW := T#3S;
		
		updateState(mytrafficlight:=mytrafficlight);
        

///////////////////////////////////////////////////////////////////////////////////////////////////////////////
	
    trafficLight_state_enum.F2_stBLINKon:
	
		mytrafficlight.state.state_str := 'stBLINKon';
		
		updateOutput(mytrafficlight:=mytrafficlight);
		
		mytrafficlight.timers.TON_BLINK(IN := TRUE, PT := T#1S);
		
		updateState(mytrafficlight:=mytrafficlight);
		
///////////////////////////////////////////////////////////////////////////////////////////////////////////////
	
    trafficLight_state_enum.F2_stBLINKoff:
		mytrafficlight.state.state_str := 'stBLINKoff';
		
		updateOutput(mytrafficlight:=mytrafficlight);
		
		mytrafficlight.timers.TON_BLINK(IN := TRUE, PT := T#1S);
		
		updateState(mytrafficlight:=mytrafficlight);
		
///////////////////////////////////////////////////////////////////////////////////////////////////////////////
    trafficLight_state_enum.F1_stYELLOW:
        mytrafficlight.state.state_str := 'stYELLOW';
		
		
		updateOutput(mytrafficlight:=mytrafficlight);
		

        mytrafficlight.timers.TON_YELLOW(IN := TRUE, PT := mytrafficlight.timers.maxtime_YELLOW);
		updateState(mytrafficlight:=mytrafficlight);		

///////////////////////////////////////////////////////////////////////////////////////////////////////////////
    trafficLight_state_enum.F1_stRED:
        mytrafficlight.state.state_str := 'stRED';
		
		
 		updateOutput(mytrafficlight:=mytrafficlight);
		
        mytrafficlight.timers.TON_RED(IN := TRUE, PT := mytrafficlight.timers.maxtime_RED);
		updateState(mytrafficlight:=mytrafficlight);		

///////////////////////////////////////////////////////////////////////////////////////////////////////////////
    trafficLight_state_enum.F1_stGREEN: 
        mytrafficlight.state.state_str := 'stGREEN';
	 
	 	updateOutput(mytrafficlight:=mytrafficlight);

        mytrafficlight.timers.TON_GREEN(IN := TRUE, PT := mytrafficlight.timers.maxtime_GREEN);
		updateState(mytrafficlight:=mytrafficlight);		

///////////////////////////////////////////////////////////////////////////////////////////////////////////////
	trafficLight_state_enum.F6_stYELLOW: 
		mytrafficlight.state.state_str := 'stYELLOW';
		  
  		updateOutput(mytrafficlight:=mytrafficlight);
		updateState(mytrafficlight:=mytrafficlight);		

///////////////////////////////////////////////////////////////////////////////////////////////////////////////
	trafficLight_state_enum.F6_stRED:
		mytrafficlight.state.state_str := 'stRED';
		
		updateOutput(mytrafficlight:=mytrafficlight);
		updateState(mytrafficlight:=mytrafficlight);

///////////////////////////////////////////////////////////////////////////////////////////////////////////////

	trafficLight_state_enum.F6_stGREEN:
	
		mytrafficlight.state.state_str := 'stGREEN';
	  
		updateOutput(mytrafficlight:=mytrafficlight);
		updateState(mytrafficlight:=mytrafficlight);		

END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>